...

@Model
final class TestResult {
    var date: Date
    var duration: TimeInterval
    var wordCount: Int
    var wrongWords: Int
    var wcpm: Double
    var test: ReadingTest?

    init(date: Date = .now, duration: TimeInterval, wordCount: Int, wrongWords: Int, test: ReadingTest? = nil) {
        self.date = date
        self.duration = duration
...
